# Pendix

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt
elasticsearch/: docker-compose.yml
elasticsearch/mappings/: episodes.json  imdb_people.json
scripts/: 01_download_episodes.py  02_transcribe.py  03_download_imdb.py  04_extract_entities.py  05_index_elasticsearch.py  manage_speakers.py  run_pipeline.py  test_results.py
